# angbandroid

./: .gitignore  CHANGES.txt  README.md  README.txt  build.gradle  gradle_bkp.properties  privacy.html  privacy.txt  revisions.bash  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: help.html  ui-cmd-README.md
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/faangband/: CMakeLists.txt  android_changes.txt  cmd-cave.c  cmd-obj.c  config.h  effect-handler-attack.c  effects-info.c  effects.c  game-input.c  game-world.c  gen-cave.c  gen-chunk.c  gen-room.c  gen-wilderness.c  generate.c  h-basic.h  list-options.h  main.c  mon-attack.c  mon-move.c  mon-msg.c  mon-summon.c  mon-util.c  obj-desc.c  obj-design.c  obj-info.c  obj-init.c  obj-knowledge.c  obj-list.c  obj-make.c  obj-pile.c  obj-properties.c  player-attack.c  player-birth.c  player-path.c  player-properties.c  player-properties.h  player-spell.c  player-util.c  save.c  (+29 more)
app/src/main/cpp/frogcomposband/: CMakeLists.txt  angdroid_legacy.c  artifact.c  autopick.c  berserker.c  birth.c  bldg.c  cavalry.c  cmd1.c  cmd2.c  cmd3.c  cmd4.c  cmd5.c  cmd6.c  combat.c  defines.h  devicemaster.c  devices.c  do-spell.c  dungeon.c  effects.c  ego.c  equip.c  externs.h  files.c  flavor.c  floors.c  generate.c  gf.c  gf.h  grid.c  h-config.h  h-system.h  hissatsu.c  igor.c  init2.c  inv.c  inv.h  load.c  main-android.c  (+71 more)
app/src/main/cpp/npp041/: CMakeLists.txt  angdroid_legacy.c  birth.c  cave.c  cmd1.c  cmd2.c  cmd3.c  cmd4.c  cmd5.c  cmd6.c  config.h  defines.h  dump_items.c  dungeon.c  externs.h  files.c  generate.c  h-config.h  h-system.h  init.h  init1.c  init2.c  load.c  main-android.c  melee1.c  melee2.c  monster1.c  monster2.c  obj-info.c  object1.c  object2.c  quest.c  randart.c  save.c  spells1.c  spells2.c  squelch.c  store.c  tables.c  types.h  (+10 more)
app/src/main/cpp/npp710/: CMakeLists.txt  angdroid_legacy.c  cave.c  cmd-know.c  cmd1.c  cmd3.c  config.h  dungeon.c  files.c  init2.c  melee2.c  object2.c  pathfind.c  spells1.c  store.c  target.c  ui-menu.c  util.c  wizard2.c  xtra3.c  z-file.c  z-term.h
app/src/main/cpp/tome23x/: .gitignore  CMakeLists.txt  Makefile  config.h  defines.h  dungeon.c  externs.h  files.c  h-config.h  h-system.h  main-android.c  main-x11.c  object1.c  res.txt  w_dun.c  w_mnster.c  w_obj.c  w_play_c.c  w_player.c  w_quest.c  w_spells.c  w_util.c  w_z_pack.c  xtra1.c
app/src/main/cpp/tome23x/lua/: Makefile
app/src/main/cpp/tome24x/: CMakeLists.txt  cmd1.cc  cmd4.cc  h-basic.hpp  init2.cc  main-android.cc  main-x11.cc  main.cc  modules.cc  xtra2.cc
app/src/main/cpp/zangband275/: CMakeLists.txt  birth.c  externs.h  files.c  h-config.h  h-system.h  l-field.c  l-monst.c  l-object.c  l-player.c  load.c  main-android.c  save.c  scores.c  util.c  xtra1.c  z-config.h  z-rand.c  z-rand.h
gradle/wrapper/: gradle-wrapper.properties
variant_lib/: make_zip.bash
variant_lib/angband/customize/: user.prf
variant_lib/angband/tiles/nomad/: flvr-nmd.prf  graf-nmd.prf  xtra-nmd.prf
variant_lib/angband/tiles/shockbolt/: flvr-shb.prf  graf-shb-dark.prf  graf-shb-light.prf  xtra-shb.prf
variant_lib/faangband/customize/: user.prf
variant_lib/faangband/gamedata/: a_normal.txt  set_item.txt
variant_lib/faangband/help/: index.txt
variant_lib/faangband/screens/: news.txt
variant_lib/faangband/tiles/nomad/: graf-nmd.prf  xtra-nmd.prf
variant_lib/faangband/tiles/shockbolt/: xtra-shb.prf
variant_lib/faangband/user/: CharOutput.txt  lore.txt  window.prf
variant_lib/faangband/user/archive/: randart_0702a3b5.txt
variant_lib/faangband/user/save/: Felivrin
variant_lib/faangband/user/scores/: scores.raw
variant_lib/frogcomposband/apex/: Makefile
variant_lib/frogcomposband/edit/: a_info.txt  e_info.txt  k_info.txt  q_spawning_pits.txt  r_info.txt  t_lite.txt  t_ulite.txt
variant_lib/frogcomposband/file/: ab_med.txt  ac_med.txt  ag_med.txt  amu_high.txt  amu_low.txt  amu_med.txt  as_med.txt  lite_drk.txt  lite_low.txt  mondeath.txt  monfrien.txt  monspeak.txt  ranged.txt  ring_high.txt  ring_low.txt  ring_med.txt  rumors.txt  silly.txt  w_hafted.txt  w_pole.txt  w_sword.txt
variant_lib/frogcomposband/help/: PossessorStats.csv  Skills-Class.csv  Skills-Racial.csv  attack.txt  attack_contents.txt  faq.txt  glossary.txt  objects.txt  objects_contents.txt  objflags.txt  objflags_contents.txt  option.txt  option_contents.txt  spells.csv
variant_lib/frogcomposband/help/html/: objflags.html  objflags_contents.html  speed.html  speedsys.html  speedsys_contents.html
variant_lib/frogcomposband/help/text/: objflags.txt  objflags_contents.txt  speed.txt  speedsys.txt  speedsys_contents.txt
variant_lib/frogcomposband/pref/: pickpref.prf  user.prf
variant_lib/npp041/bone/: bone.128  bone.137  bone.140
variant_lib/npp041/edit/: artifact.txt  cost_adj.txt  ego_item.txt  flavor.txt  limits.txt  monster.txt  names.txt  object.txt  p_class.txt  p_hist.txt  p_race.txt  quest.txt  shop_own.txt  terrain.txt  vault.txt
variant_lib/npp041/file/: news.txt
variant_lib/npp041/help/: angdesc.txt  attribut.txt  basctask.txt  birth.txt  charscrn.txt  cmddesc.txt  cmdlist.txt  combat.hlp  combat.txt  defence.txt  dungeon.txt  equip.txt  insc_macro.txt  magic.txt  objs-mon.txt  options.txt  overview.txt  pref.txt  quests.txt  raceclas.txt  resource.txt  symbols.txt  town.txt  tutorial.txt
variant_lib/npp041/pref/: classes.prf  font-x11.prf  pref-mac.prf  pref.prf  shades.prf  user.prf
variant_lib/npp054/edit/: monster.txt  object.txt
variant_lib/npp054/pref/: user.prf
variant_lib/npp054/save/: PLAYER
variant_lib/npp710/edit/: monster.txt  object.txt
variant_lib/silq/edit/: monster.txt
variant_lib/silq/pref/: graf-new.prf  graf.prf  user.prf
variant_lib/tome23x/mods/: mods_aux.lua
variant_lib/tome23x/mods/fury/: module.lua  permission.txt
variant_lib/tome23x/pref/: pref.prf
variant_lib/zangband275/help/: charattr.txt  interface.html
variant_lib/zangband275/pref/: graf-xxx.prf  pref.prf
winmerge/: Libs.flt  Sources.flt  utils.txt
(+657 files in other folders)
